# tg-promo-agent

./: .env.example  .gitignore  Dockerfile  README.md  config.example.yaml  config.yaml  pyproject.toml  railway.toml
.github/workflows/: ci.yml
src/tg_promo_agent/: __init__.py  agent.py  config.py  health.py  llm.py  main.py  mcp_server.py  policy.py  state.py
src/tg_promo_agent/scripts/: login.py
src/tg_promo_agent/tools/: __init__.py  cross_post.py  telegram.py  tgstat.py
tests/: test_policy.py
