[project]
name = "tg-promo-agent"
version = "0.1.0"
description = "Autonomous AI agent that grows Telegram channels via MTProto + Groq + MCP tooling."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "AlexMonako" }]
dependencies = [
    "telethon>=1.36.0",
    "groq>=0.11.0",
    "aiohttp>=3.10.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pyyaml>=6.0.2",
    "aiosqlite>=0.20.0",
    "pydantic>=2.8.0",
    "python-dotenv>=1.0.1",
    "tenacity>=9.0.0",
    "mcp>=1.0.0",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
tg-promo-agent = "tg_promo_agent.main:run"
tg-promo-login = "tg_promo_agent.scripts.login:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "ASYNC"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
